fixed spacing of turn your home into on about us page.

--- a/pub/media/styles.css
+++ b/pub/media/styles.css
@@ -43,3 +43,8 @@
 .blue-link {
   color: #41B8EA
 }
+
+.turn-your-home {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
